# NN-AE-VQE

./: .gitignore  Example_1_Instance_H2.py  Example_2_Generate_reference_data.py  Example_3_Train_encoder_H2.py  Example_4_Validate_encoder_H2.py  Example_5_Train_encoder_Li_H.py  README.md  dependencies.txt  pyproject.toml
data/: QAE_HH.json  aevqe_data_HH.json  aevqe_data_HH_1000.json  aevqe_data_HH_20.json  aevqe_data_HH_backup.json  aevqe_data_HH_big.json  aevqe_data_HH_parallel_test.json  aevqe_data_HH_tests.json  exact_data.json  exect_data.json  vqe_data_HH.json  vqe_data_HH_20.json  vqe_data_HH_20_test.json  vqe_data_HH_20_tests.json  vqe_data_HH_tests.json  vqe_data_H_tests.json
examples/: Example_1_Instance_H2.py  Example_2_Generate_reference_data.py  Example_3_Train_encoder_H2.py  Example_4_Validate_encoder_H2.py  Example_5_Train_encoder_Li_H.py
src/: AEVQE.py  Ansatz.py  ChemInstance.py  Gates.py  NeuralNetwork.py  QAE.py  QAE_old.py  Utils.py  VQEBase.py  minimal_VQE_class.py  optimizer.py
tests/: AtomBasetest.py  VQEtest.py  minimal_test_vqe.py
tutorial/: 00_reference_exact.py  01_run_vqe.py  02_generate_vqe_data.py  03_train_QAE.py  04_validate_QAE.py  05_run_AE_VQE.py  06_generate_AE-VQE_data.py  07_validate_AE-VQE_data.py  08_AE-VQE_init_parameters.py  09_AE-VQE_gradient.py  10_inspect_parameters.py  11_train_neural_network_vqe.py  12_train_NN-AE-VQE.py  13_check_runtimes.py  __init__.py  debug.py
tutorial/training_logs/: cp.weights.h5  history.json
(+11 files in other folders)
