[project]
name = "NN-AE-VQE"
version = "0.3.0"
authors = [
  { name="Koen Mesman", email="k.j.mesman@tudelft.nl" },
]
description = "NN + QAE variant of VQE"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/koenmesman/NN-AE-VQE"
Issues = "https://github.com/koenmesman/NN-AE-VQE/issues"